2005-04-09  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: fix a segfault if a binary file can't be
	  accessed (opreport -gl; opannotate) problem and solution pointed
	  by Maynard P. Johnson <maynardj@us.ibm.com>.
	* libutil++/op_bfd.h: op_bfd member function must check for a NULL
	  ibfd before using it.

2005-04-07  John Levon  <levon@movementarian.org>

	* libutil/tests/Makefile.am:
	* libutil++/tests/Makefile.am:
	* libdb/tests/Makefile.am:
	* libop/tests/Makefile.am: fix tests build

2005-04-07  John Levon  <levon@movementarian.org>

	* m4/Makefile.am:
	* m4/binutils.m4:
	* configure.in: move binutils stuff into a macro

	* doc/oprofile.xml: fixes and improvements

2005-04-07  John Levon  <levon@movementarian.org>

	* libpp/callgraph_container.cpp: hoist image/app name lookup
	  outside of the loop

2005-04-07  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: performance improvements with handling
	  symbols

2005-04-06  John Levon  <levon@movementarian.org>

	* libpp/populate.h:
	* libpp/populate.cpp:
	* libpp/callgraph_container.cpp:
	* libutil++/cached_value.h:
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp:
	* pp/opannotate.cpp:
	* pp/opreport.cpp:
	* libutil++/tests/Makefile.am:
	* libutil++/tests/cached_value_tests.cpp: tweak CRC buffer.
	Do delayed debug info searching (makes no actual difference).

2005-04-05  John Levon  <levon@movementarian.org>

	* libpp/format_output.cpp: add separator at first function
	  for opreport -c

2005-04-05  John Levon  <levon@movementarian.org>

	* libpp/callgraph_container.h:
	* libpp/callgraph_container.cpp:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp: implement -i / -e for
	  opreport -c

2005-04-05  John Levon  <levon@movementarian.org>

	* libpp/format_output.h:
	* libpp/format_output.cpp:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp: implement --global-percent
	  for opreport -c

2005-04-04  John Levon  <levon@movementarian.org>

	* configure.in:
	* doc/Makefile.am: