@@ -1,3 +1,7 @@
+2005-04-11  John Levon  <levon@movementarian.org>
+
+	* pp/opannotate.cpp: fix opannotate matching several binaries
+
 2005-04-09  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libutil++/op_bfd.cpp: fix a segfault if a binary file can't be
